# opengl_proj

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.MD  main.cxx
libs/assimp/: assimp-vc142-mt.lib
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glfw/include/glfw/: glfw3.h
libs/glfw/mac/: libglfw.3.3.dylib
res/shader/: pbr.frag  pbr.vert
src/: App.cpp  App.h  main.cpp
src/constant/: CommonDefine.h  KeyCode.h
src/core/: App.cpp  App.h  Camera.cpp  Camera.h  Input.cpp  Input.h  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  PrimitiveModel.cpp  PrimitiveModel.h  Shader.cpp  Shader.h  Texture.cpp  Time.cpp  Time.h  Transform.cpp  Transform.h
src/design/: Singleton.h
src/event/: EventMgr.h
src/gui/: BaseWindow.cpp  BaseWindow.h  MainWindow.cpp  MainWindow.h  SceneWindow.cpp  SceneWindow.h  WindowMgr.h
src/utils/: CommonUtils.h  Debug.cpp  Debug.h
